# msda_switchbox

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  after_runner.sh  compose.yml  pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: docker.yml
src/switchbox/: __main__.py  compose.py  config.py  flaskapp.py
src/switchbox/blueprints/: __init__.py  healthz.py  job.py  params.py
src/switchbox/data/: etl_params.yml
src/switchbox/models/: __init__.py  etl_params.py  job.py
src/switchbox/subdeployment/: .env  compose.yml
src/switchbox/utils/: data.py  etlrun.py
tests/test_switchbox/: test_placeholder.py
